--- a/HackerRankMobile/Base.lproj/Main.storyboard
+++ b/HackerRankMobile/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E189a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="WRs-B5-sAy">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E189a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="WRs-B5-sAy">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -69,6 +69,7 @@
                                         </constraints>
                                         <connections>
                                             <outlet property="mainLabel" destination="qCF-AK-a6t" id="v13-AQ-fDu"/>
+                                            <segue destination="ONQ-WF-Xvu" kind="showDetail" identifier="transitionToDetail" id="vlP-jr-ZVV"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -91,7 +92,6 @@
                     </navigationItem>
                     <connections>
                         <outlet property="collectionView" destination="8HS-62-UXD" id="Owm-nI-Mr3"/>
-                        <segue destination="ONQ-WF-Xvu" kind="show" identifier="transitionToDetail" id="tm1-mK-GGP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="u7D-qi-IKL" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -172,7 +172,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UQA-KB-pop" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="FkT-dc-JAb" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1229.5999999999999" y="79.610194902548727"/>
+            <point key="canvasLocation" x="1258" y="80"/>
         </scene>
     </scenes>
 </document>
