--- a/HackerRankMobile/Base.lproj/Main.storyboard
+++ b/HackerRankMobile/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E189a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="WRs-B5-sAy">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G12b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="WRs-B5-sAy">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -69,7 +69,6 @@
                                         </constraints>
                                         <connections>
                                             <outlet property="mainLabel" destination="qCF-AK-a6t" id="v13-AQ-fDu"/>
-                                            <segue destination="ONQ-WF-Xvu" kind="showDetail" identifier="transitionToDetail" id="vlP-jr-ZVV"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -92,16 +91,18 @@
                     </navigationItem>
                     <connections>
                         <outlet property="collectionView" destination="8HS-62-UXD" id="Owm-nI-Mr3"/>
+                        <segue destination="ONQ-WF-Xvu" kind="show" identifier="transitionToSteam" id="nmf-tB-eh8"/>
+                        <segue destination="ZcX-kw-Nzc" kind="show" identifier="transitionToMakestagram" id="4yY-RP-mvZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="u7D-qi-IKL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="438" y="80"/>
         </scene>
-        <!--Title-->
+        <!--Steam-->
         <scene sceneID="NIV-7D-ght">
             <objects>
-                <viewController id="ONQ-WF-Xvu" customClass="DetailViewController" customModule="HackerRankMobile" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Steam" id="ONQ-WF-Xvu" customClass="DetailViewController" customModule="HackerRankMobile" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Mqt-r0-Kee"/>
                         <viewControllerLayoutGuide type="bottom" id="edP-ag-IMc"/>
@@ -172,7 +173,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UQA-KB-pop" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="FkT-dc-JAb" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1258" y="80"/>
+            <point key="canvasLocation" x="1223" y="-251"/>
+        </scene>
+        <!--Makestagram-->
+        <scene sceneID="DAH-y7-mhe">
+            <objects>
+                <viewController title="Makestagram" id="ZcX-kw-Nzc" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Inl-JM-80r"/>
+                        <viewControllerLayoutGuide type="bottom" id="6eS-as-bqk"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="or5-yy-oaS">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0zg-7c-Qp3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1222" y="444"/>
         </scene>
     </scenes>
 </document>
