--- a/HackerRankMobile/Base.lproj/Main.storyboard
+++ b/HackerRankMobile/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F2073" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="WRs-B5-sAy">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="17A315i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="WRs-B5-sAy">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -41,21 +42,21 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="JQI-eW-sF6">
-                                    <size key="itemSize" width="100" height="100"/>
+                                    <size key="itemSize" width="150" height="150"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ReuseID" id="EZQ-41-jTh" customClass="CustomCollectionViewCell" customModule="HackerRankMobile" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qCF-AK-a6t">
-                                                    <rect key="frame" x="27" y="40" width="46.5" height="20.5"/>
+                                                    <rect key="frame" x="52" y="40" width="46.5" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="17"/>
                                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -93,6 +94,9 @@
                         <outlet property="collectionView" destination="8HS-62-UXD" id="Owm-nI-Mr3"/>
                         <segue destination="ONQ-WF-Xvu" kind="show" identifier="transitionToSteam" id="nmf-tB-eh8"/>
                         <segue destination="ZcX-kw-Nzc" kind="show" identifier="transitionToMakestagram" id="3CB-FV-hPW"/>
+                        <segue destination="BIi-RA-nsn" kind="show" identifier="transitionToMapView" id="ABh-q5-vNi"/>
+                        <segue destination="Ehr-Du-KQR" kind="show" identifier="transitionToAuth" id="q4E-kx-Dzq"/>
+                        <segue destination="Wl8-eS-JDa" kind="show" identifier="transitionToHRMobile" id="xSH-A1-u75"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="u7D-qi-IKL" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -175,6 +179,51 @@
             </objects>
             <point key="canvasLocation" x="1223" y="-251"/>
         </scene>
+        <!--Map View Controller-->
+        <scene sceneID="OgC-vr-5Rj">
+            <objects>
+                <viewController id="BIi-RA-nsn" customClass="MapViewController" customModule="HackerRankMobile" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="EH2-tw-OH0"/>
+                        <viewControllerLayoutGuide type="bottom" id="Zcp-Sm-XzE"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ZWw-lK-jYL">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pnq-KC-rFC">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                            </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="008-EN-ZBJ">
+                                <rect key="frame" x="271" y="617" width="88" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="E9T-Ja-wdO"/>
+                                    <constraint firstAttribute="width" constant="88" id="FpA-Bq-YvS"/>
+                                </constraints>
+                                <state key="normal" title="Redo Search"/>
+                                <connections>
+                                    <action selector="redoSearchButtonTapped:" destination="BIi-RA-nsn" eventType="touchDown" id="aJo-Mf-ieD"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Zcp-Sm-XzE" firstAttribute="top" secondItem="008-EN-ZBJ" secondAttribute="bottom" constant="20" id="8Dz-FZ-Imj"/>
+                            <constraint firstAttribute="trailing" secondItem="pnq-KC-rFC" secondAttribute="trailing" id="8o8-k6-3Jf"/>
+                            <constraint firstItem="pnq-KC-rFC" firstAttribute="leading" secondItem="ZWw-lK-jYL" secondAttribute="leading" id="Iie-8F-xsN"/>
+                            <constraint firstItem="pnq-KC-rFC" firstAttribute="top" secondItem="EH2-tw-OH0" secondAttribute="bottom" id="Prh-z1-p6W"/>
+                            <constraint firstItem="008-EN-ZBJ" firstAttribute="trailing" secondItem="ZWw-lK-jYL" secondAttribute="trailingMargin" id="fB8-PR-DC4"/>
+                            <constraint firstItem="Zcp-Sm-XzE" firstAttribute="top" secondItem="pnq-KC-rFC" secondAttribute="bottom" id="zL3-7f-rGC"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="mapView" destination="pnq-KC-rFC" id="aFN-2U-agi"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3eP-0R-RMG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1221.5999999999999" y="-940.47976011994012"/>
+        </scene>
         <!--Makestagram-->
         <scene sceneID="DAH-y7-mhe">
             <objects>
@@ -192,7 +241,43 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0zg-7c-Qp3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1222" y="520"/>
+            <point key="canvasLocation" x="1222" y="409"/>
+        </scene>
+        <!--Authentication View Controller-->
+        <scene sceneID="TV0-0i-Ssk">
+            <objects>
+                <viewController id="Ehr-Du-KQR" customClass="AuthenticationViewController" customModule="HackerRankMobile" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Dew-g8-qHy"/>
+                        <viewControllerLayoutGuide type="bottom" id="A4W-tz-du7"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="3Ga-81-LCX">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ntz-RJ-Cd4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1222" y="1071"/>
+        </scene>
+        <!--Mobile View Controller-->
+        <scene sceneID="503-kr-iYF">
+            <objects>
+                <viewController id="Wl8-eS-JDa" customClass="HRMobileViewController" customModule="HackerRankMobile" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="auC-Qs-uvP"/>
+                        <viewControllerLayoutGuide type="bottom" id="LCx-yU-I1R"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="0zU-TH-p7u">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oCw-Ka-vMm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1222" y="1734"/>
         </scene>
     </scenes>
 </document>
